--- a/.github/workflows/check_for_new_installer.yml
+++ b/.github/workflows/check_for_new_installer.yml
@@ -1,9 +1,10 @@
 name: check for new installer
 on:
-  push:
-    branches: [ master ]
-  schedule:
-    - cron: "15 18 * * *"
+  workflow_dispatch:
+  # push:
+  #   branches: [ master ]
+  # schedule:
+  #   - cron: "15 18 * * *"
 jobs:
   check_for_new_installer:
     runs-on: ubuntu-latest
